[package]
name = "onelist"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
axum = { version = "0.7.5", features = ["http2"] }
chrono = "0.4.38"
config = "0.14.0"

futures-util = "0.3.30"
mime_guess = "2.0.4"
mini-moka = "0.10.3"
onedrive-api = { version = "0.10.0", default-features = false }
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
] }
rust-embed = "8.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
snafu = "0.8.2"
tokio = { version = "1.38.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
] }
toml = "0.8.14"
tower-http = { version = "0.5.2", features = [
    "trace",
    "compression-full",
    "timeout",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.1"

hyper-util = "0.1.5"
hyper-rustls = { version = "0.27.2", features = ["http2"] }


[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
lto = "thin"      # Use Thin LTO for better compile times
strip = true      # Remove debug symbols
opt-level = "z"
codegen-units = 1
