[package]
name = "onelist"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
axum = { version = "0.7.9", features = ["http2"] }
chrono = "0.4.38"
config = "0.14.1"

futures-util = "0.3.31"
mime_guess = "2.0.5"
mini-moka = "0.10.3"
onedrive-api = { version = "0.10.0", default-features = false }
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
rust-embed = "8.5.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
snafu = "0.8.5"
tokio = { version = "1.41.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
] }
toml = "0.8.19"
tower-http = { version = "0.6.1", features = [
    "trace",
    "compression-full",
    "timeout",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.3"

hyper-util = "0.1.10"
hyper-rustls = { version = "0.27.3", default-features = false, features = [
    "ring",
    "webpki-tokio",
    "http1",
    "http2",
] }


[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
lto = "thin"      # Use Thin LTO for better compile times
strip = true      # Remove debug symbols
opt-level = "z"
codegen-units = 1
